--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "start": "nodemon -w src -w package.json --exec babel-node src/main.js",
     "dev:esbuild": "nodemon -w src -w package.json dev-esbuild.js",
     "dev:run": "nodemon -w sub-store.min.js sub-store.min.js",
-    "build": "gulp",
+    "build": "gulp bundle",
     "bundle": "node bundle.js",
     "bundle:esbuild": "node bundle-esbuild.js",
     "changelog": "conventional-changelog -p cli -i CHANGELOG.md -s"
